--- a/BowKad_DM2.Rmd
+++ b/BowKad_DM2.Rmd
@@ -220,6 +220,7 @@ mean(rmseLmStep)
 mean(map2_dbl(minKModel, houseKNN$test, modelr::rmse))
 
 ```
+The highest performing model is the step-wise selected linear model. This is likely due to KNNs inability to handle many independent variables, where the step wise function is able to systematically remove low performing variables and keep high performing variables. Some interactions might be adding variance without better explaining the data, while others increase the models explanatory power. The KNN model can't get rid of the noise created by all the interactions while the step-wise gradually eliminates variables till the model yielding the lowest RMSE is produced. Having multiple favorable features in a property like waterfront access and proximity to schools can increase the value of a property exponentially, but the presence of some pairs of features are much more significant than other pairs, so choosing a method of modeling that can remove these non significant pairs (or interactions) is crucial.
 
 #Number 3
 ```{r #Number 3, include=TRUE}
@@ -376,7 +377,7 @@ confusedBasicChild
 confusedBigChild
 
 confusedBestChild
-###################################################### lable confusion matrices better
+
 ```
 
 
