--- a/BowKad_DM2.Rmd
+++ b/BowKad_DM2.Rmd
@@ -71,24 +71,11 @@ ggplot(avg_board) +
   xlab("Average Passengers") + ylab("Hour of Day")
   
 ```
-Caption: The plot above displays average boardings of Capital Metro buses on the UT campus, averaged
-by hour of day, broken down by month (September, October, November) and finally faceted by day of
-the week, and finally by month (September, October, November). In general, the hour of peak boardings
-fluctuates between 3PM and 5:30PM across weekdays.
+Caption: The plot above displays average boardings of Capital Metro buses on the UT campus, averaged by hour of day, broken down by month (September, October, November) and finally faceted by day of the week, and finally by month (September, October, November). In general, the hour of peak boardings fluctuates between 3PM and 5:30PM across weekdays.
 
-This pattern is most likely the result of the majority of UT classes ending in the afternoon between these
-hours. We note that on weekends, there is no readily discernible peak boarding hour, since no classes
-are held on weekends and there will be much fewer students on campus. Average boardings on
-Mondays in September appear to be lower than in other days and months. A possible reason for this is
-twofold. First, given that the semester starts in late August and begins with syllabus week, many
-students may choose to not go to campus an attend classes as academic pressure is still low at this stage
-of the term. Second, having just arrived at school, many students may be excited to see their peers and
-spend their weekends partying (intensely) which may lower enthusiasm for Monday classes.
-Similarly, we observe that average boardings on Wednesday, Thursday, and Friday appear lower in
-November. This is potentially caused by the fact that in November most courses hold their midterms.
-Furthermore, the majority of class assignments are likely due towards the end of the week. This greater
-workload may compel some students to stay on campus and study late into the night, causing them to
-miss the last bus and return home using other means.
+This pattern is most likely the result of the majority of UT classes ending in the afternoon between these hours. We note that on weekends, there is no readily discernible peak boarding hour, since no classes are held on weekends and there will be much fewer students on campus. Average boardings on Mondays in September appear to be lower than in other days and months. A possible reason for this is twofold. First, given that the semester starts in late August and begins with syllabus week, many students may choose to not go to campus an attend classes as academic pressure is still low at this stage of the term. Second, having just arrived at school, many students may be excited to see their peers and spend their weekends partying (intensely) which may lower enthusiasm for Monday classes.
+
+Similarly, we observe that average boardings on Wednesday, Thursday, and Friday appear lower in November. This is potentially caused by the fact that in November most courses hold their midterms. Furthermore, the majority of class assignments are likely due towards the end of the week. This greater workload may compel some students to stay on campus and study late into the night, causing them to miss the last bus and return home using other means.
 #1-b
 ```{r #1b, include=TRUE}
 knitr::opts_chunk$set(echo = F)
